--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -214,6 +214,9 @@
                 android:paddingLeft="@dimen/dp_15"
                 android:paddingRight="@dimen/dp_15"
                 android:textSize="@dimen/sp_14" />
+
+            <View style="@style/margin_horizontal_line"
+                android:layout_marginTop="@dimen/dp_15"/>
         </LinearLayout>
 
     </ScrollView>
