--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_15">
 
         <TextView
             android:id="@+id/tv_order_no"
@@ -34,7 +35,7 @@
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
     </RelativeLayout>
-
+    <View style="@style/horizontal_line" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
