--- a/app/src/main/res/layout/activity_upgrade_to_student.xml
+++ b/app/src/main/res/layout/activity_upgrade_to_student.xml
@@ -3,12 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/layout_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
     <Button
         android:id="@+id/btn_submit"
         style="@style/important_corners_btn"
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/dp_25"
         android:layout_marginLeft="@dimen/dp_15"
         android:layout_marginRight="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_15"
@@ -16,12 +20,26 @@
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_16" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_25"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_15"
+            android:textSize="@dimen/sp_14"
+            android:gravity="center"
+            android:text="@string/save_role_tip"
+            android:textColor="@color/color_666666"/>
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_above="@id/layout_bottom"
         android:fillViewport="true">
 
         <LinearLayout
@@ -30,6 +48,45 @@
             android:orientation="vertical"
             android:padding="@dimen/dp_15">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_50">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="真实姓名："
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/dp_16" />
+
+                <EditText
+                    android:id="@+id/et_real_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:ellipsize="end"
+                    android:maxLength="6"
+                    android:gravity="right|center_vertical"
+                    android:hint="请输入真实姓名"
+                    android:singleLine="true"
+                    android:textColor="@color/color_333333"
+                    android:textColorHint="@color/color_cccccc"
+                    android:textSize="@dimen/dp_16" />
+
+                <ImageView
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_gravity="center_vertical"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerInside"
+                    android:visibility="gone"
+                    android:src="@drawable/icon_more" />
+            </LinearLayout>
+            <View style="@style/horizontal_line" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_50">
@@ -52,7 +109,7 @@
                     android:background="@android:color/transparent"
                     android:ellipsize="end"
                     android:gravity="right|center_vertical"
-                    android:hint="请填写学校名称"
+                    android:hint="请输入学校名称"
                     android:singleLine="true"
                     android:textColor="@color/color_333333"
                     android:textColorHint="@color/color_cccccc"
@@ -64,6 +121,7 @@
                     android:layout_gravity="center_vertical"
                     android:adjustViewBounds="true"
                     android:scaleType="centerInside"
+                    android:visibility="gone"
                     android:src="@drawable/icon_more" />
             </LinearLayout>
 
@@ -153,6 +211,7 @@
                     android:layout_height="@dimen/dp_22"
                     android:layout_gravity="center_vertical"
                     android:adjustViewBounds="true"
+                    android:visibility="gone"
                     android:scaleType="centerInside"
                     android:src="@drawable/icon_more" />
             </LinearLayout>
