--- a/app/src/main/res/layout/activity_bulletin_detail.xml
+++ b/app/src/main/res/layout/activity_bulletin_detail.xml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:id="@+id/layout_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
-    <cn.com.mangopi.android.ui.widget.web.WebView
+        <ImageButton
+            android:id="@+id/ib_back"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/dp_24"
+            android:background="@android:color/transparent"
+            android:layout_gravity="center"
+            android:scaleType="fitXY"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:src="@drawable/del_white"/>
+
+        <View
+            style="@style/horizontal_line" />
+    </FrameLayout>
+
+    <cn.com.mangopi.android.ui.widget.web.MangoWebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/layout_bottom"
         android:layerType="software"
         android:scrollbars="none" />
 
-</LinearLayout>
+</RelativeLayout>
