--- a/app/src/main/res/layout/activity_set_nick_name.xml
+++ b/app/src/main/res/layout/activity_set_nick_name.xml
@@ -27,6 +27,7 @@
             android:layout_height="@dimen/dp_140"
             android:gravity="center">
             <ImageView
+                android:id="@+id/iv_female"
                 android:layout_width="@dimen/dp_84"
                 android:layout_height="@dimen/dp_84"
                 android:src="@drawable/user_pic1"
@@ -34,6 +35,7 @@
                 android:scaleType="centerInside"/>
 
             <ImageView
+                android:id="@+id/iv_man"
                 android:layout_width="@dimen/dp_84"
                 android:layout_height="@dimen/dp_84"
                 android:layout_marginLeft="@dimen/dp_30"
