--- a/app/src/main/res/layout/activity_select_pay.xml
+++ b/app/src/main/res/layout/activity_select_pay.xml
@@ -29,6 +29,7 @@
             android:padding="@dimen/dp_15">
 
             <LinearLayout
+                android:id="@+id/layout_unionpay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical">
@@ -61,6 +62,7 @@
                 android:layout_marginTop="@dimen/dp_5" />
 
             <LinearLayout
+                android:id="@+id/layout_alipay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical">
@@ -94,6 +96,7 @@
                 android:layout_marginTop="@dimen/dp_5" />
 
             <LinearLayout
+                android:id="@+id/layout_wechatpay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical">
