--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -89,9 +89,12 @@
             android:textSize="@dimen/sp_14" />
     </RelativeLayout>
 
-    <View style="@style/horizontal_line" />
+    <View
+        android:id="@+id/v_line"
+        style="@style/horizontal_line" />
 
     <LinearLayout
+        android:id="@+id/layout_action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
