--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -146,29 +146,31 @@
                 </FrameLayout>
 
                 <LinearLayout
+                    android:id="@+id/layout_two_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:paddingLeft="@dimen/dp_10"
                     android:paddingRight="@dimen/dp_10"
                     android:background="@android:color/white"
                     android:paddingBottom="@dimen/dp_20">
 
                     <ImageView
+                        android:id="@+id/iv_group1"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/dp_70"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/home_gongzuobao" />
+                        android:scaleType="centerCrop" />
 
                     <ImageView
+                        android:id="@+id/iv_group2"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/dp_70"
                         android:layout_marginLeft="@dimen/dp_15"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/home_kecheng" />
+                        android:scaleType="centerCrop" />
                 </LinearLayout>
 
                 <LinearLayout
