--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -83,10 +83,12 @@
 
         <ImageView
             android:id="@+id/iv_picture"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_180"
-            android:layout_marginBottom="@dimen/dp_15"
-            android:scaleType="centerCrop" />
+            android:adjustViewBounds="true"
+            android:layout_gravity="left"
+            android:layout_marginBottom="@dimen/dp_15"/>
+
         <cn.com.mangopi.android.ui.widget.GridView
             android:id="@+id/gv_picture"
             android:layout_width="match_parent"
