--- a/app/src/main/res/layout/activity_order_schedule_calendar.xml
+++ b/app/src/main/res/layout/activity_order_schedule_calendar.xml
@@ -61,6 +61,24 @@
                 android:verticalSpacing="@dimen/dp_0.5"
                 android:horizontalSpacing="@dimen/dp_0.5"
                 android:numColumns="7" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/color_333333"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/dp_15"
+                android:text="选择上课时间"/>
+
+            <cn.com.mangopi.android.ui.widget.GridView
+                android:id="@+id/gv_sct_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:verticalSpacing="@dimen/dp_4"
+                android:horizontalSpacing="@dimen/dp_4"
+                android:numColumns="3" />
         </LinearLayout>
 
     </RelativeLayout>
