--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -9,7 +9,6 @@
         android:id="@+id/layout_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_15"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -20,6 +19,9 @@
             android:layout_height="@dimen/dp_22"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_15"
             android:src="@drawable/faxian_xiangting"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
@@ -36,7 +38,7 @@
             android:textSize="@dimen/dp_14" />
 
         <Button
-            android:id="@+id/btn_place_order"
+            android:id="@+id/btn_project_join"
             style="@style/important_corners_btn"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_35"
@@ -44,9 +46,11 @@
             android:layout_centerVertical="true"
             android:paddingLeft="@dimen/dp_10"
             android:paddingRight="@dimen/dp_10"
-            android:text="下单"
-            android:enabled="false"
-            android:visibility="gone"
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:text="立即报名"
+            android:visibility="invisible"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/dp_14" />
     </RelativeLayout>
@@ -250,6 +254,50 @@
                 android:visibility="gone"
                 android:layout_marginBottom="@dimen/dp_15"/>
 
+            <View
+                style="@style/horizontal_line"/>
+
+            <LinearLayout
+                android:id="@+id/layout_courses"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:gravity="center_vertical">
+
+                <View
+                    android:layout_width="@dimen/dp_4"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/dp_2"
+                    android:layout_marginTop="@dimen/dp_2"
+                    android:background="@color/color_ffb900" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:textColor="@color/color_333333"
+                    android:text="课程推荐"
+                    android:textSize="@dimen/sp_16" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/line_courses"
+                android:layout_marginTop="@dimen/dp_15"
+                style="@style/horizontal_line"/>
+
+            <cn.com.mangopi.android.ui.widget.ListView
+                android:visibility="gone"
+                android:id="@+id/lv_courses"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@color/color_efeff4"/>
+
+            <View
+                android:id="@+id/line_courses_bottom"
+                style="@style/horizontal_line"/>
         </LinearLayout>
     </ScrollView>
 
