--- a/app/src/main/res/layout/listview_item_text_in_popup.xml
+++ b/app/src/main/res/layout/listview_item_text_in_popup.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/iv_right"
+        android:layout_width="@dimen/dp_22"
+        android:layout_height="@dimen/dp_22"
+        android:adjustViewBounds="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/dp_15"
+        android:src="@drawable/selector_res_pay_tip" />
 
     <TextView
         android:id="@+id/tv_text"
@@ -10,7 +20,10 @@
         android:layout_height="wrap_content"
         android:textColor="@color/color_666666"
         android:textSize="@dimen/sp_14"
-        android:gravity="center"
+        android:layout_toLeftOf="@id/iv_right"
+        android:layout_marginRight="@dimen/dp_15"
+        android:gravity="left|center_vertical"
+        android:layout_marginLeft="@dimen/dp_15"
         android:layout_gravity="center"
         android:padding="@dimen/dp_15"/>
-</LinearLayout>
+</RelativeLayout>
